--- a/teamsanddomains.html
+++ b/teamsanddomains.html
@@ -81,7 +81,7 @@
           <div>
             <div>
                 <ul>
-                    <li class="hovertochange" id="c1" data-text="Home"><span id="cl-1" class="commonwrong">&#10006;</span><a href="index.html" style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
+                    <li class="hovertochange" id="c1" data-text="Home" style="margin-top: 12vh;"><span id="cl-1" class="commonwrong">&#10006;</span><a href="index.html" style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
                     <li class="hovertochange" id="c2" data-text="Events" ><span id="cl-2" class="commonwrong">&#10006;</span><a href="events.html" style="font-family: 'Montserrat';color: #1bfaad;">Events</a></li>
                     <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3" class="commonwrong">&#10006;</span><a href="sponsors.html"style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
                     <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5" class="commonwrong">&#10006;</span><a href="https://www.meraevents.com/event/elan2022" target="_blank" style="font-family: Montserrat;color: #1bfaad;" >Workshops</a></li>
