--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/slider.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/about.css">
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Bangers&family=Gorditas&family=Montserrat:wght@300&family=IM+Fell+DW+Pica&family=Permanent+Marker&family=Vast+Shadow&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Gorditas&family=Montserrat:wght@300&family=Libre+Caslon+Text&family=Urbanist:wght@500&display=swap"
         rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
 </head>
 
@@ -103,7 +101,7 @@
                 <a href="#" style="color: white;"><i class="fas fa-chevron-up "></i></a>
             </div>
             <div class="left" data-aos="fade-up">
-                <h1>Elan and &#951;vision</h1>
+                <h1 style="font-family: 'Libre Caslon Text', serif;">Elan &amp; &#951;vision</h1>
                 <div class="tagline">THE GRANDEST TECHO-CULTURAL FIESTA<br>IN AP &amp; TELANGANA
                 </div>
             </div>
@@ -125,7 +123,7 @@
                 country and take away bagful memories and experiences.
                 <img src="images/Fest.jpg" data-aos="fade-up">
             </div>
-            <h1 style="text-align: center;font-size: calc(60px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));"
+            <h1 style="text-align: center;font-size: calc(60px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));font-family: 'Urbanist', sans-serif;"
                 data-aos="fade-up" data-aos-once="true">About Us</h1>
             <div class="about-text no-display" data-aos="fade-up" data-aos-once="true"
                 style="font-size: calc(11px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">
@@ -153,7 +151,7 @@
                 <div class="row">
                     <div class="col col-main first-l"
                         style="text-align: center;font-size: calc(10px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));font-family: 'Montserrat', sans-serif;">
-                        <h1 style="font-size: calc(35px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">General Stats
+                        <h1 style="font-size: calc(35px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));font-family: 'Urbanist', sans-serif;">General Stats
                         </h1>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">13th Edition</div>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">40+ Events</div>
@@ -165,7 +163,7 @@
                     </div>
                     <div class="col col-main last"
                         style="text-align: center;font-size: calc(10px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));font-family: 'Montserrat', sans-serif;">
-                        <h1 style="font-size: calc(35px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">Online
+                        <h1 style="font-size: calc(35px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));font-family: 'Urbanist', sans-serif;">Online
                             Outreach</h1>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">Facebook: 42,000+likes</div>
                         <div class="col relie" data-aos="fade-down" data-aos-once="true">Instagram: 2700+Followers</div>
