--- a/teamsanddomains.html
+++ b/teamsanddomains.html
@@ -4,16 +4,31 @@
 
 
 <head>
-    <title>Turn.js: The page flip effect in HTML5</title>
+    <title>Teams and Domains</title>
     <meta name="viewport" content="width=1200" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <meta name="keywords"
         content="page,flip,pages,effect,flipbook,flipboard,jquery,html5,book,magazine,newspaper,ipad,iphone,android,ios" />
     <meta name="description" content="Turn.js makes a beautiful page turning effect using HTML5 and jQuery" />
     <link rel="icon" type="image/png" href="pics/favicon.png" />
-
+    <link rel="stylesheet" href="css/main.css">
     <link type="text/css" rel="stylesheet" href="css/default.css">
     <link type="text/css" rel="stylesheet" href="css/all.min.css">
     </link>
+    
+    <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        ::-webkit-scrollbar-button {
+            display: none;
+        }
+
+        body {
+            -ms-overflow-style: none;
+        }
+    </style>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -26,10 +41,51 @@
     <script type="text/javascript" src="lib/turn.min.js"></script>
     <script type="text/javascript" src="lib/zoom.min.js"></script>
     <script type="text/javascript" src="lib/bookshelf.js"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
-    <div class="Team "data-aos="fade-up">
+    <div id="loaded">
+    <div class="header" id="header" style="background: none; height: auto; width: auto;">
+        <div class="logo" id="logo"
+            style="position: fixed;top:0;width:100px;height: 100px;top: 2vh;margin-left: 2vw;z-index: 10000000;">
+            <a href="#"><img width="100px" class="logohover" height="100px" src="images/logo.png"></a>
+        </div>
+        <div class="menu-wrap" id="menu-wrap">
+            <input type="checkbox" class="toggler">
+            <div class="hamburger">
+                <div></div>
+            </div>
+            <div class="menu" style="background: linear-gradient(to right,#09203F ,#537895);padding-top: 20vh;">
+                <div>
+                    <div>
+                        <ul>
+                            <li class="hovertochange" id="c1" data-text="Home"><span id="cl-1"
+                                    class="commonwrong">&#10006;</span><a href="index.html"
+                                    style="font-family: Montserrat;color: #1bfaad;">Home</a></li>
+                            <li class="hovertochange" id="c2" data-text="Events"><span id="cl-2"
+                                    class="commonwrong">&#10006;</span><a href="events.html"
+                                    style="font-family: 'Montserrat';color: #1bfaad;">Events</a></li>
+                            <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3"
+                                    class="commonwrong">&#10006;</span><a href="sponsors.html"
+                                    style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
+                            <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5"
+                                    class="commonwrong">&#10006;</span><a
+                                    href="https://www.meraevents.com/event/elan2022" target="_blank"
+                                    style="font-family: Montserrat;color: #1bfaad;">Workshops</a></li>
+                            <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4"
+                                    class="commonwrong">&#10006;</span><a href="teamsanddomains.html"
+                                    style="font-family: Montserrat;color: #1bfaad;">Teams and Domains</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Team" data-aos="fade-up">
         <div>Teams & Domains</div>
     </div>
 
@@ -157,14 +213,22 @@
 
                     <!-- Grid column -->
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 usefullinks">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Useful Links</h6>
-                        <p data-aos="fade-up" >
-                            <a class="text-white" href="https://iith.ac.in/" target="_blank"
-                                style="text-decoration: none;">IITH Website</a>
+                        <h6 class="text-uppercase mb-4 font-weight-bold"><b>Our Sponsors</b></h6>
+                        <p data-aos="fade-up" data-aos-once="true">
+                            <a class="text-white" href="https://www.larsentoubro.com/" 
+                                style="text-decoration: none;">Laursen &amp; Toubro</a>
                         </p>
-                        <p data-aos="fade-up" >
-                            <a class="text-white" href="https://gymkhana.iith.ac.in/" target="_blank"
-                                style="text-decoration: none;">Gymkhana IITH</a>
+                        <p data-aos="fade-up" data-aos-once="true">
+                            <a class="text-white" href="https://www.arcesium.com/" 
+                                style="text-decoration: none;">Arcesium</a>
+                        </p>
+                        <p data-aos="fade-up" data-aos-once="true">
+                            <a class="text-white" href="https://sbi.co.in/" 
+                                style="text-decoration: none;">State Bank of India</a>
+                        </p>
+                        <p data-aos="fade-up" data-aos-once="true">
+                            <a class="text-white" href="https://www.honeywell.com/us/en" 
+                                style="text-decoration: none;">Honeywell</a>
                         </p>
                     </div>
 
@@ -218,7 +282,7 @@
             © 2021 Copyright: Elan and &#951;vision Web team 
         <!-- Copyright -->
     </footer>
-
+</div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.clouds.min.js"></script>
@@ -227,19 +291,6 @@
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
     <script>
-        /*       VANTA.CLOUDS({
-                el: "#page",
-                mouseControls: true,
-                touchControls: true,
-                gyroControls: false,
-                minHeight: 100.00,
-                minWidth: 100.00,
-                skyColor: 0xd48826,
-                sunColor: 0xf2890a,
-                sunGlareColor: 0xf43d00,
-                sunlightColor: 0xf47800,
-                speed: 1.3
-              }) */
         VANTA.NET({
             el: "#page",
             mouseControls: true,
@@ -260,6 +311,26 @@
         AOS.init({
   duration : 1000
 });
+let cl_1=document.getElementById('cl-1')
+        let cl_2=document.getElementById('cl-2')
+        let cl_3=document.getElementById('cl-3')
+        let cl_4=document.getElementById('cl-4')
+        let cl_5=document.getElementById('cl-5')
+        let c1=document.getElementById('c1')
+        let c2=document.getElementById('c2')
+        let c3=document.getElementById('c3')
+        let c4=document.getElementById('c4')
+        let c5=document.getElementById('c5')
+        c1.addEventListener("mouseover",()=>{cl_1.style.color="red"})
+        c1.addEventListener("mouseleave",()=>{cl_1.style.color="rgba(107, 201, 255, 0.116)"})
+        c2.addEventListener("mouseover",()=>{cl_2.style.color="red"})
+        c2.addEventListener("mouseleave",()=>{cl_2.style.color="rgba(107, 201, 255, 0.116)"})
+        c3.addEventListener("mouseover",()=>{cl_3.style.color="red"})
+        c3.addEventListener("mouseleave",()=>{cl_3.style.color="rgba(107, 201, 255, 0.116)"})
+        c4.addEventListener("mouseover",()=>{cl_4.style.color="red"})
+        c4.addEventListener("mouseleave",()=>{cl_4.style.color="rgba(107, 201, 255, 0.116)"})
+        c5.addEventListener("mouseover",()=>{cl_5.style.color="red"})
+        c5.addEventListener("mouseleave",()=>{cl_5.style.color="rgba(107, 201, 255, 0.116)"})
       </script>
 </body>
 
