--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Are+You+Serious&family=Covered+By+Your+Grace&family=Gloria+Hallelujah&family=Kaushan+Script&family=Reenie+Beanie&family=Yellowtail&display=swap" rel="stylesheet">
     <script>
         // Added preloader using onload function as below and display property
         window.onload = function () {
@@ -103,7 +114,8 @@
                 <a href="#" style="color: white;"><i class="fas fa-chevron-up "></i></a>
             </div>
             <div class="left" data-aos="fade-up">
-                <h1>Elan and &#951;vision</h1>
+                <h1 style="font-family: 'Covered By Your Grace', cursive; 
+                ">Elan & &#951;vision</h1>
                 <div class="tagline">THE GRANDEST TECHO-CULTURAL FIESTA<br>IN AP &amp; TELANGANA
                 </div>
             </div>
@@ -115,14 +127,9 @@
         
         <div class="about" id="about"
             style="background:url('images/giphy.gif');background-repeat: no-repeat;background-size: cover;color:white;background-position: center;font-family: 'Poppins', sans-serif;">
-            <div class="intro-text" data-aos="fade-up" data-aos-once="true"
+            <div class="intro-text " data-aos="fade-up" data-aos-once="true"
                 style="font-size: calc(11px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">
-                Elan and ηVision is the annual techno-cultural fest of IIT Hyderabad and is one of the largest fests in
-                South India. Elan refers to the cultural part and ηVision cites the technological part of fest. Elan &
-                ηVision boasts of several professional and semi-professional crowd pulling events and memorable
-                pro-shows. It promises to be a grand event that exhibits the best of cultural performances, technical
-                solutions, and advances from the student community. Students hail from various institutes throughout the
-                country and take away bagful memories and experiences.
+                Elan and ηVision is the annual techno-cultural fest of IIT Hyderabad and is one of the largest fests in South India. Elan refers to the cultural part and ηVision cites the technological part of fest. This fest boasts of several professional and semi-professional crowd pulling events and promises to be a grand event that exhibits the best of cultural performances, technical solutions, and advances from the student community.
                 <img src="images/Fest.jpg" data-aos="fade-up">
             </div>
             <h1 style="text-align: center;font-size: calc(60px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));"
@@ -130,12 +137,13 @@
             <div class="about-text no-display" data-aos="fade-up" data-aos-once="true"
                 style="font-size: calc(11px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">
                 <img src="images/about.jpg" data-aos="fade-up">
-                This fest is held in the campus of IIT Hyderabad and is completely organised by the students. Right
+                <!-- This fest is held in the campus of IIT Hyderabad and is completely organised by the students. Right
                 after the fest gets completed, preparations for the next year’s fest begin. Students of IITH amalgamate
                 into a team and put all their efforts into organising this fest. The whole organising team is divided
                 into 19 domains. Each domain has its own motive and functionality. All the domains coordinate with each
                 other and host this fabulous fest.
-
+                -->
+                This fest is held in the campus of IIT Hyderabad and is completely organised by the students. Students of IITH amalgamate into a team and put all their efforts into organising this fest. Each domain of this organisation has its own motive and all of them collectively organise this fantabulous fest.
             </div>
             <div class="about-text one-display"
                 style="font-size: calc(11px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));">
