--- a/events.html
+++ b/events.html
@@ -205,6 +205,65 @@
                     <div class="row ">
 
                         <div class="col-md-7 px-3">
+                            <div class="card-block px-6 ">
+                                <h3 class=" text-center font-weight-bold">Pronites </h3>
+                                <p class="card-text text-justify">
+                                    Apart from all the competitions, our fest never fails to entertain people with fun
+                                    and
+                                    exciting shows. Here is the list of the proshows conducted last year: (Elan
+                                    2021)<br>
+                                <h4>Indie Rock - Naalayak </h4>
+                                <h4>Talk with Shriya Pilgaonkar</h4>
+                                <h4>suhani shah show </h4>
+                                <h4>Comedy Night with Zakir Khan</h4>
+                            </div>
+                        </div>
+                        <!-- Carousel start -->
+                        <div class="col-md-5">
+                            <div id="CarouselTest-4" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#CarouselTest-4" data-slide-to="0" class="active"></li>
+                                    <li data-target="#CarouselTest-4" data-slide-to="1"></li>
+                                    <!-- <li data-target="#CarouselTest-4" data-slide-to="2"></li> -->
+
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="d-block" src="images/zakir.jpeg" alt="" height="350px"
+                                            width="500px">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block" src="images/suhani_shah.jpeg" alt="" height="350px"
+                                            width="500px">
+                                    </div>
+                                    <!-- <div class="carousel-item">
+                                        <img class="d-block" src="images/shriya.jpeg" alt="" height="400px"
+                                            width="500px">
+                                    </div> -->
+                                    <a class="carousel-control-prev" href="#CarouselTest-4" role="button"
+                                        data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#CarouselTest-4" role="button"
+                                        data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End of carousel -->
+                    </div>
+                </div>
+                <!-- End of card -->
+            </div>
+            <div class="container py-3" style="margin-right:0px">
+                <!-- Card Start -->
+                <div class="card" data-aos="fade-right">
+                    <div class="row ">
+
+                        <div class="col-md-7 px-3">
                             <div class="card-block px-6">
                                 <h3 class=" text-center font-weight-bold">Culti </h3>
                                 <p class="card-text">
@@ -260,9 +319,9 @@
                 </div>
                 <!-- End of card -->
             </div>
-            <div class="container py-3" style="margin-right:0px">
+            <div class="container py-3" style="margin-left:0px">
                 <!-- Card Start -->
-                <div class="card" data-aos="fade-right">
+                <div class="card" data-aos="fade-left">
                     <div class="row ">
 
                         <div class="col-md-7 px-3">
@@ -324,9 +383,9 @@
                 </div>
                 <!-- End of card -->
             </div>
-            <div class="container py-3" style="margin-left:0px">
+            <div class="container py-3" style="margin-right:0px">
                 <!-- Card Start -->
-                <div class="card" data-aos="fade-left">
+                <div class="card" data-aos="fade-right">
                     <div class="row ">
 
                         <div class="col-md-7 px-3">
@@ -385,9 +444,9 @@
                 </div>
                 <!-- End of card -->
             </div>
-            <div class="container py-3" style="margin-right:0px">
+            <div class="container py-3" style="margin-left:0px">
                 <!-- Card Start -->
-                <div class="card" data-aos="fade-right">
+                <div class="card" data-aos="fade-left">
                     <div class="row ">
 
                         <div class="col-md-7 px-3">
@@ -422,7 +481,7 @@
                                             width="500px">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block" src="images/social cause-2.jpg" alt="" height="400px"
+                                        <img class="d-block" src="images/Mental_health_matters.jpg" alt="" height="400px"
                                             width="500px">
                                     </div>
                                     <!-- <div class="carousel-item">
@@ -448,9 +507,9 @@
                 <!-- End of card -->
             </div>
 
-            <div class="container py-3" style="margin-left:0px">
+            <div class="container py-3" style="margin-right:0px">
                 <!-- Card Start -->
-                <div class="card" data-aos="fade-left">
+                <div class="card" data-aos="fade-right">
                     <div class="row ">
 
                         <div class="col-md-7 px-3 text-wrap">
@@ -512,9 +571,9 @@
                 </div>
                 <!-- End of card -->
             </div>
-            <div class="container py-3" style="margin-right:0px">
+            <div class="container py-3" style="margin-left:0px">
                 <!-- Card Start -->
-                <div class="card" data-aos="fade-right">
+                <div class="card" data-aos="fade-left">
                     <div class="row ">
 
                         <div class="col-md-7 px-3">
@@ -573,71 +632,6 @@
                 </div>
                 <!-- End of card -->
             </div>
-
-
-            <!-- End of card -->
-
-            <div class="container py-3" style="margin-left:0px">
-                <!-- Card Start -->
-                <div class="card" data-aos="fade-left">
-                    <div class="row ">
-
-                        <div class="col-md-7 px-3">
-                            <div class="card-block px-6 ">
-                                <h3 class=" text-center font-weight-bold">Pronites </h3>
-                                <p class="card-text text-justify">
-                                    Apart from all the competitions, our fest never fails to entertain people with fun
-                                    and
-                                    exciting shows. Here is the list of the proshows conducted last year: (Elan
-                                    2021)<br>
-                                <h4>Indie Rock - Naalayak </h4>
-                                <h4>Talk with Shriya Pilgaonkar</h4>
-                                <h4>suhani shah show </h4>
-                                <h4>Comedy Night with Zakir Khan</h4>
-                            </div>
-                        </div>
-                        <!-- Carousel start -->
-                        <div class="col-md-5">
-                            <div id="CarouselTest-4" class="carousel slide" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#CarouselTest-4" data-slide-to="0" class="active"></li>
-                                    <li data-target="#CarouselTest-4" data-slide-to="1"></li>
-                                    <!-- <li data-target="#CarouselTest-4" data-slide-to="2"></li> -->
-
-                                </ol>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img class="d-block" src="images/zakir.jpeg" alt="" height="350px"
-                                            width="500px">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block" src="images/suhani_shah.jpeg" alt="" height="350px"
-                                            width="500px">
-                                    </div>
-                                    <!-- <div class="carousel-item">
-                                        <img class="d-block" src="images/shriya.jpeg" alt="" height="400px"
-                                            width="500px">
-                                    </div> -->
-                                    <a class="carousel-control-prev" href="#CarouselTest-4" role="button"
-                                        data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#CarouselTest-4" role="button"
-                                        data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End of carousel -->
-                    </div>
-                </div>
-                <!-- End of card -->
-            </div>
-
-
         </div>
         <footer class="text-center text-light text-white"
             style="background: radial-gradient(#0e1013,#04163c);overflow: hidden;font-family: 'Montserrat', sans-serif;">
