--- a/events.html
+++ b/events.html
@@ -72,7 +72,7 @@
 <body>
 
     <div id="preloader">
-        <img src="images/loader-gif.gif">
+        <img src="images/loader.gif">
         <!-- Adding a preloader loader.gif on before loading-->
     </div>
     <div id="loaded">
