--- a/sponsors.html
+++ b/sponsors.html
@@ -68,7 +68,7 @@
 
 <body>
   <div id="preloader">
-    <img src="images/loader-gif.gif">
+    <img src="images/loader.gif">
   </div>
   <div id="loaded" class="loaded">
     <div class="header" id="header" style="background: none; height: auto; width: auto;">
