--- a/sponsors.html
+++ b/sponsors.html
@@ -47,8 +47,8 @@
             }
           }
     #preloader img {
-      height: 300px;
-      width: 350px;
+      height: 400px;
+      width: 450px;
     }
 
     #loaded {
@@ -72,7 +72,7 @@
 
 <body>
   <div id="preloader">
-    <img src="images/loader.gif">
+    <img src="images/loader1.gif" >
   </div>
   <div id="loaded" class="loaded">
     <div class="header" id="header" style="background: none; height: auto; width: auto;">
