--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Gorditas&family=Montserrat:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
+    <script src="https://kit.fontawesome.com/38b5a7225a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
