--- a/events.html
+++ b/events.html
@@ -71,6 +71,7 @@
           -ms-overflow-style: none;
         }
       </style>
+    <script src="https://kit.fontawesome.com/38b5a7225a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
