--- a/sponsors.html
+++ b/sponsors.html
@@ -67,6 +67,7 @@
       -ms-overflow-style: none;
     }
   </style>
+  <script src="https://kit.fontawesome.com/38b5a7225a.js" crossorigin="anonymous"></script>
 </head>
 
 
