--- a/teamsanddomains.html
+++ b/teamsanddomains.html
@@ -50,6 +50,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="css/animate.css">
+    <script src="https://kit.fontawesome.com/38b5a7225a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
