--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
     <script src="https://kit.fontawesome.com/38b5a7225a.js" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
