cryptex page added

--- a/index.html
+++ b/index.html
@@ -144,16 +144,19 @@
                                 <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4"
                                         class="commonwrong">&#10006;</span><a href="teamsanddomains.html"
                                         style="font-family: Montserrat;color: #1bfaad;">Teams and Domains</a></li>
+                                <li class="hovertochange" id="c6" data-text="Teams and Domains"><span id="cl-6"
+                                        class="commonwrong">&#10006;</span><a href="cryptex.html"
+                                        style="font-family: Montserrat;color: #1bfaad;">Cryptex</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
             <a href="#" style="color: white;">
-            <div class="uparrow" id="uparrow" style="color: white;">
-                <i class="fas fa-chevron-up "></i>
-            </div>
-        </a>
+                <div class="uparrow" id="uparrow" style="color: white;">
+                    <i class="fas fa-chevron-up "></i>
+                </div>
+            </a>
             <div class="left" data-aos="fade-up">
 
                 <h1 style="font-family: 'Playfair Display SC', serif; 
@@ -382,20 +385,22 @@
                 duration: 1200
             }
         )
-        window.addEventListener('scroll',function(){
-            var scroll=document.querySelector('.uparrow');
-            scroll.classList.toggle("active",window.scrollY>500)
+        window.addEventListener('scroll', function () {
+            var scroll = document.querySelector('.uparrow');
+            scroll.classList.toggle("active", window.scrollY > 500)
         })
         let cl_1 = document.getElementById('cl-1')
         let cl_2 = document.getElementById('cl-2')
         let cl_3 = document.getElementById('cl-3')
         let cl_4 = document.getElementById('cl-4')
         let cl_5 = document.getElementById('cl-5')
+        let cl_6 = document.getElementById('cl-6')
         let c1 = document.getElementById('c1')
         let c2 = document.getElementById('c2')
         let c3 = document.getElementById('c3')
         let c4 = document.getElementById('c4')
         let c5 = document.getElementById('c5')
+        let c6 = document.getElementById('c6')
         c1.addEventListener("mouseover", () => { cl_1.style.color = "red" })
         c1.addEventListener("mouseleave", () => { cl_1.style.color = "rgba(107, 201, 255, 0.116)" })
         c2.addEventListener("mouseover", () => { cl_2.style.color = "red" })
@@ -406,7 +411,9 @@
         c4.addEventListener("mouseleave", () => { cl_4.style.color = "rgba(107, 201, 255, 0.116)" })
         c5.addEventListener("mouseover", () => { cl_5.style.color = "red" })
         c5.addEventListener("mouseleave", () => { cl_5.style.color = "rgba(107, 201, 255, 0.116)" })
-        
+        c6.addEventListener("mouseover", () => { cl_6.style.color = "red" })
+        c6.addEventListener("mouseleave", () => { cl_6.style.color = "rgba(107, 201, 255, 0.116)" })
+
     </script>
     <!-- SwiperJs for including a customised slider -->
     <script src="js/swiper.js"></script>
