--- a/sponsors.html
+++ b/sponsors.html
@@ -41,11 +41,15 @@
       height: 300px;
       width: 350px;
     }
-    @-moz-document url-prefix() { /* Disable scrollbar Firefox */
-            html{
-              scrollbar-width: none;
-            }
-          }
+
+    @-moz-document url-prefix() {
+
+      /* Disable scrollbar Firefox */
+      html {
+        scrollbar-width: none;
+      }
+    }
+
     #preloader img {
       height: 300px;
       width: 350px;
@@ -73,7 +77,7 @@
 
 <body>
   <div id="preloader">
-    <img src="images/loader1.gif" >
+    <img src="images/loader1.gif">
   </div>
   <div id="loaded" class="loaded">
     <div class="header" id="header" style="background: none; height: auto; width: auto;">
@@ -98,10 +102,15 @@
                 <li class="hovertochange" id="c3" data-text="Sponsors"><span id="cl-3"
                     class="commonwrong">&#10006;</span><a href="sponsors.html"
                     style="font-family: 'Montserrat';color: #1bfaad;">Sponsors</a></li>
-                    <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5" class="commonwrong">&#10006;</span><a href="https://www.meraevents.com/event/elan2022" target="_blank" style="font-family: Montserrat;color: #1bfaad;" >Workshops</a></li>
+                <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5"
+                    class="commonwrong">&#10006;</span><a href="https://www.meraevents.com/event/elan2022"
+                    target="_blank" style="font-family: Montserrat;color: #1bfaad;">Workshops</a></li>
                 <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4"
                     class="commonwrong">&#10006;</span><a href="teamsanddomains.html"
                     style="font-family: Montserrat;color: #1bfaad;">Teams and Domains</a></li>
+                <li class="hovertochange" id="c6" data-text="Teams and Domains"><span id="cl-6"
+                    class="commonwrong">&#10006;</span><a href="cryptex.html"
+                    style="font-family: Montserrat;color: #1bfaad;">Cryptex</a></li>
               </ul>
             </div>
           </div>
@@ -806,26 +815,30 @@
     AOS.init({
       duration: 2000
     });
-    let cl_1=document.getElementById('cl-1')
-        let cl_2=document.getElementById('cl-2')
-        let cl_3=document.getElementById('cl-3')
-        let cl_4=document.getElementById('cl-4')
-        let cl_5=document.getElementById('cl-5')
-        let c1=document.getElementById('c1')
-        let c2=document.getElementById('c2')
-        let c3=document.getElementById('c3')
-        let c4=document.getElementById('c4')
-        let c5=document.getElementById('c5')
-        c1.addEventListener("mouseover",()=>{cl_1.style.color="red"})
-        c1.addEventListener("mouseleave",()=>{cl_1.style.color="rgba(107, 201, 255, 0.116)"})
-        c2.addEventListener("mouseover",()=>{cl_2.style.color="red"})
-        c2.addEventListener("mouseleave",()=>{cl_2.style.color="rgba(107, 201, 255, 0.116)"})
-        c3.addEventListener("mouseover",()=>{cl_3.style.color="red"})
-        c3.addEventListener("mouseleave",()=>{cl_3.style.color="rgba(107, 201, 255, 0.116)"})
-        c4.addEventListener("mouseover",()=>{cl_4.style.color="red"})
-        c4.addEventListener("mouseleave",()=>{cl_4.style.color="rgba(107, 201, 255, 0.116)"})
-        c5.addEventListener("mouseover",()=>{cl_5.style.color="red"})
-        c5.addEventListener("mouseleave",()=>{cl_5.style.color="rgba(107, 201, 255, 0.116)"})
+    let cl_1 = document.getElementById('cl-1')
+        let cl_2 = document.getElementById('cl-2')
+        let cl_3 = document.getElementById('cl-3')
+        let cl_4 = document.getElementById('cl-4')
+        let cl_5 = document.getElementById('cl-5')
+        let cl_6 = document.getElementById('cl-6')
+        let c1 = document.getElementById('c1')
+        let c2 = document.getElementById('c2')
+        let c3 = document.getElementById('c3')
+        let c4 = document.getElementById('c4')
+        let c5 = document.getElementById('c5')
+        let c6 = document.getElementById('c6')
+        c1.addEventListener("mouseover", () => { cl_1.style.color = "red" })
+        c1.addEventListener("mouseleave", () => { cl_1.style.color = "rgba(107, 201, 255, 0.116)" })
+        c2.addEventListener("mouseover", () => { cl_2.style.color = "red" })
+        c2.addEventListener("mouseleave", () => { cl_2.style.color = "rgba(107, 201, 255, 0.116)" })
+        c3.addEventListener("mouseover", () => { cl_3.style.color = "red" })
+        c3.addEventListener("mouseleave", () => { cl_3.style.color = "rgba(107, 201, 255, 0.116)" })
+        c4.addEventListener("mouseover", () => { cl_4.style.color = "red" })
+        c4.addEventListener("mouseleave", () => { cl_4.style.color = "rgba(107, 201, 255, 0.116)" })
+        c5.addEventListener("mouseover", () => { cl_5.style.color = "red" })
+        c5.addEventListener("mouseleave", () => { cl_5.style.color = "rgba(107, 201, 255, 0.116)" })
+        c6.addEventListener("mouseover", () => { cl_6.style.color = "red" })
+        c6.addEventListener("mouseleave", () => { cl_6.style.color = "rgba(107, 201, 255, 0.116)" })
 
   </script>
   <!-- <script src="js/sponsors.js"></script> -->
