ca-portal link added

--- a/sponsors.html
+++ b/sponsors.html
@@ -105,6 +105,10 @@
                 <li class="hovertochange" id="c5" data-text="Teams and Domains"><span id="cl-5"
                     class="commonwrong">&#10006;</span><a href="https://www.meraevents.com/event/elan2022"
                     target="_blank" style="font-family: Montserrat;color: #1bfaad;">Workshops</a></li>
+                    <li class="hovertochange" id="c7" data-text="Teams and Domains"><span id="cl-7"
+                      class="commonwrong">&#10006;</span><a
+                      href="http://ca.elan.org.in/" target="_blank"
+                      style="font-family: Montserrat;color: #1bfaad;">CA Portal</a></li>
                 <li class="hovertochange" id="c4" data-text="Teams and Domains"><span id="cl-4"
                     class="commonwrong">&#10006;</span><a href="teamsanddomains.html"
                     style="font-family: Montserrat;color: #1bfaad;">Teams and Domains</a></li>
@@ -821,12 +825,14 @@
         let cl_4 = document.getElementById('cl-4')
         let cl_5 = document.getElementById('cl-5')
         let cl_6 = document.getElementById('cl-6')
+        let cl_7 = document.getElementById('cl-7')
         let c1 = document.getElementById('c1')
         let c2 = document.getElementById('c2')
         let c3 = document.getElementById('c3')
         let c4 = document.getElementById('c4')
         let c5 = document.getElementById('c5')
         let c6 = document.getElementById('c6')
+        let c7 = document.getElementById('c7')
         c1.addEventListener("mouseover", () => { cl_1.style.color = "red" })
         c1.addEventListener("mouseleave", () => { cl_1.style.color = "rgba(107, 201, 255, 0.116)" })
         c2.addEventListener("mouseover", () => { cl_2.style.color = "red" })
@@ -839,6 +845,8 @@
         c5.addEventListener("mouseleave", () => { cl_5.style.color = "rgba(107, 201, 255, 0.116)" })
         c6.addEventListener("mouseover", () => { cl_6.style.color = "red" })
         c6.addEventListener("mouseleave", () => { cl_6.style.color = "rgba(107, 201, 255, 0.116)" })
+        c7.addEventListener("mouseover", () => { cl_7.style.color = "red" })
+        c7.addEventListener("mouseleave", () => { cl_7.style.color = "rgba(107, 201, 255, 0.116)" })
 
   </script>
   <!-- <script src="js/sponsors.js"></script> -->
