--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="header" id="header">
             <div class="logo" id="logo"
                 style="position: sticky;top:0;width:80px;height: 80px;top: 2vh;margin-left: 2vw;z-index: 1000000;">
-                <a href="#"><img width="100px" class="logohover" height="100px" src="images/logo.png"></a>
+                <a href="#"><img  class="logohover logoimg"  src="images/logo.png"></a>
             </div>
             <div class="menu-wrap" id="menu-wrap" style="z-index: 10000;">
                 <input type="checkbox" class="toggler">
