--- a/teamsanddomains.html
+++ b/teamsanddomains.html
@@ -59,7 +59,7 @@
         <div class="header" id="header" style="background: none; height: auto; width: auto;">
             <div class="logo" id="logo"
                 style="position: fixed;top:0;width:100px;height: 100px;top: 2vh;margin-left: 2vw;z-index: 10000000;">
-                <a href="#"><img width="100px" class="logohover" height="100px" src="images/logo.png"></a>
+                <a href="#"><img  class="logohover logoimg"  src="images/logo.png"></a>
             </div>
             <div class="menu-wrap" id="menu-wrap">
                 <input type="checkbox" class="toggler">
